Carrousel desplegable productos, empezado

--- a/index.html
+++ b/index.html
@@ -185,6 +185,74 @@
         </div>
 
         <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Suplementos</h3>
+        <div id="carouselIndicators" class="carrousel carousel slide my-5">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div class="col">
+                  <div class="card" style="width: 200px;">
+                    <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h6 class="text-muted">NaturHit Essentials</h6>
+                      <h5 class="card-title">Ashwagandha 600 mg</h5>
+                      <p class="card-text">90 cápsulas</p>
+                      <h4>23,55€</h4>
+                      <a href="#" class="btn btn-success">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card" style="width: 200px;">
+                    <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h6 class="text-muted">NaturHit Essentials</h6>
+                      <h5 class="card-title">Ashwagandha 600 mg</h5>
+                      <p class="card-text">90 cápsulas</p>
+                      <h4>23,55€ <small class="text-muted text-decoration-line-through">28,7€</small></h4>
+                      <a href="#" class="btn btn-success">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col">
+                  <div class="card" style="width: 200px;">
+                    <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h6 class="text-muted">NaturHit Essentials</h6>
+                      <h5 class="card-title">Ashwagandha 600 mg</h5>
+                      <p class="card-text">90 cápsulas</p>
+                      <h4>23,55€</h4>
+                      <a href="#" class="btn btn-success">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card" style="width: 200px;">
+                    <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h6 class="text-muted">NaturHit Essentials</h6>
+                      <h5 class="card-title">Ashwagandha 600 mg</h5>
+                      <p class="card-text">90 cápsulas</p>
+                      <h4>23,55€ <small class="text-muted text-decoration-line-through">28,7€</small></h4>
+                      <a href="#" class="btn btn-success">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
 
         <footer>
           <div class="row gap-4 d-flex flex-wrap pt-5 fw-bold" style="background-color: #64b885; justify-content: center;">
