Botón lateral de categorías rellenado

--- a/index.html
+++ b/index.html
@@ -31,8 +31,37 @@
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-          <div>
-            <img src="ref/suplementos.jpg" class="figure-img img-fluid rounded-circle">
+          <div class="categorias row d-flex flex-wrap text-center" style="justify-content: center;">
+            <div class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesuplementos"
+              aria-expanded="false" aria-controls="collapsesuplementos">
+              <img src="ref/suplementos.jpg" class="figure-img img-fluid rounded-circle" style="width: 120px;">
+              <p class="fw-bold">Suplementos</p>
+            </div>
+            <div class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsealimentacion"
+              aria-expanded="false" aria-controls="collapsealimentacion">
+              <img src="ref/alimentacion.jpg" class="figure-img img-fluid rounded-circle" style="width: 120px;">
+              <p class="fw-bold">Alimentación</p>
+            </div>
+            <div class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefrescos"
+              aria-expanded="false" aria-controls="collapsefrescos">
+              <img src="ref/frescos.jpg" class="figure-img img-fluid rounded-circle" style="width: 120px;">
+              <p class="fw-bold">Frescos</p>
+            </div>
+            <div class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsecosmetica"
+              aria-expanded="false" aria-controls="collapsecosmetica">
+              <img src="ref/cosmetica-e-higiene.jpg" class="figure-img img-fluid rounded-circle" style="width: 120px;">
+              <p class="fw-bold">Cosmética e higiene</p>
+            </div>
+            <div class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsemama"
+              aria-expanded="false" aria-controls="collapsemama">
+              <img src="ref/mama.jpg" class="figure-img img-fluid rounded-circle" style="width: 120px;">
+              <p class="fw-bold">Mamá y bebé</p>
+            </div>
+            <div class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsehogar"
+              aria-expanded="false" aria-controls="collapsehogar">
+              <img src="ref/hogar.jpg" class="figure-img img-fluid rounded-circle" style="width: 120px;">
+              <p class="fw-bold">Hogar y huerto</p>
+            </div>
           </div>
         </div>
       </div>
