Puntos de interrupción y ajustes de tamaño, aún faltan algunos por terminar

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <span>Envío gratis a partir de 49€</span>
     </div>
 
-    <div class="header row" style="align-items: center; background-color: white;">
-      <div class="boton navbar-light col-1 offset-1">
+    <div class="header row" style="align-items: center; justify-content: center; background-color: white; height: 100px;">
+      <div class="boton navbar-light col-1 offset-1 d-md-none">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#categorias"
           aria-controls="categorias">
           <span class="navbar-toggler-icon"></span>
@@ -252,11 +252,11 @@
     <div class="collapse" id="collapsesuplementos">
       <div class="card card-body">
         <h3 class="mb-0 mt-3">Productos: Suplementos</h3>
-        <div id="carouselIndicators" class="carrousel carousel slide my-5">
+        <div id="carouselIndicators" class="carrousel carousel my-5">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row d-flex px-5" style="justify-content: center;">
-                <div class="col">
+                <div class="col-6 col-lg-3 pb-4 pb-lg-0">
                   <div class="card">
                     <img src="ref/sup1.webp" class="card-img-top px-5 pt-4" alt="...">
                     <div class="card-body">
@@ -273,7 +273,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-6 col-lg-3 pb-4 pb-lg-0">
                     <div class="card">
                       <img src="ref/sup2.webp" class="card-img-top px-5 pt-4" alt="...">
                       <div class="card-body">
@@ -290,7 +290,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-6 col-lg-3">
                     <div class="card">
                       <img src="ref/sup3.webp" class="card-img-top px-5 pt-4" alt="...">
                       <div class="card-body">
@@ -307,7 +307,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-6 col-lg-3">
                     <div class="card">
                       <img src="ref/sup4.webp" class="card-img-top px-5 pt-4" alt="...">
                       <div class="card-body">
@@ -794,7 +794,7 @@
         </div>
 
         <footer>
-          <div class="row gap-4 d-flex flex-wrap pt-5 fw-bold"
+          <div class="row gap-4 d-flex flex-wrap py-5 fw-bold"
             style="background-color: #64b885; justify-content: center;">
             <div class="ayuda col ps-5">
               <h5>Ayuda</h5>
@@ -818,8 +818,8 @@
                   Atención al cliente
                 <p class="m-0"></p>
                 <a href="" style="color: white; font-weight: normal;">919 019 101</a>
-                <span class="fw-normal">- </span>
-                <a href="" style="color: white; font-weight: normal;">932 711 184</a>
+                <span class="fw-normal d-none d-xl-inline">- </span>
+                <a href="" style="color: white; font-weight: normal;"><br class="d-xl-none">932 711 184</a>
                 <p>Lunes a Viernes de 10 a 18h.</p>
                 </p>
                 <p href="" class="m-0">
@@ -862,8 +862,8 @@
             </div>
             <div class="social col-3 pe-5" style="width: 29%;">
               <h5>Descarga nuestra APP</h5>
-              <div class="row">
-                <div class="col">
+              <div class="row px-3">
+                <div class="col-xxl-6 px-0 pb-2">
                   <button class="btn btn-dark row d-flex p-0 m-0" style="width: 140px; border-radius: 10px;">
                     <i class="bi bi-apple col-4 text-center p-2" style="font-size: 25px;"></i>
                     <div class="col p-0 text-start">
@@ -872,7 +872,7 @@
                     </div>
                   </button>
                 </div>
-                <div class="col mb-3">
+                <div class="col-xxl-6 px-0 pb-2">
                   <button class="btn btn-dark row d-flex p-0 m-0" style="width: 140px; border-radius: 10px;">
                     <i class="bi bi-google-play col-4 text-center p-2" style="font-size: 25px;"></i>
                     <div class="col p-0 text-start">
