Puntos interrupción footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span>Envío gratis a partir de 49€</span>
     </div>
 
-    <div class="header row" style="align-items: center; justify-content: center; background-color: white; height: 100px;">
+    <div class="header row" style="align-items: center; justify-content: center; background-color: white;">
       <div class="boton navbar-light col-1 offset-1 d-md-none">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#categorias"
           aria-controls="categorias">
@@ -67,7 +67,7 @@
       </div>
 
       <div class="logo col-2">
-        <img src="ref/logo.jpg" class="img-fluid" alt="logo">
+        <img src="ref/logo.jfif" class="img-fluid" alt="logo">
       </div>
 
       <div class="buscador col-4">
@@ -796,7 +796,7 @@
         <footer>
           <div class="row gap-4 d-flex flex-wrap py-5 fw-bold"
             style="background-color: #64b885; justify-content: center;">
-            <div class="ayuda col ps-5">
+            <div class="ayuda col-10 col-sm-5 col-lg-3">
               <h5>Ayuda</h5>
               <div style="color: white;">
                 <p href="">
@@ -833,7 +833,7 @@
                 </p>
               </div>
             </div>
-            <div class="nosotros col">
+            <div class="nosotros col-10 col-sm-5 col-lg-2">
               <h5>Sobre nosotros</h5>
               <div style="color: white;">
                 <p href="">Quiénes somos</p>
@@ -846,7 +846,7 @@
                 <p href="">Programas afiliados</p>
               </div>
             </div>
-            <div class="marcas col">
+            <div class="marcas col-10 col-sm-5 col-lg-2">
               <h5>Marcas</h5>
               <div style="color: white;">
                 <p href="">Nuestras marcas</p>
@@ -860,10 +860,10 @@
                 <p href="">Aquilea</p>
               </div>
             </div>
-            <div class="social col-3 pe-5" style="width: 29%;">
+            <div class="social col-10 col-sm-5 col-lg-3">
               <h5>Descarga nuestra APP</h5>
               <div class="row px-3">
-                <div class="col-xxl-6 px-0 pb-2">
+                <div class="col px-0 pb-2 mx-1">
                   <button class="btn btn-dark row d-flex p-0 m-0" style="width: 140px; border-radius: 10px;">
                     <i class="bi bi-apple col-4 text-center p-2" style="font-size: 25px;"></i>
                     <div class="col p-0 text-start">
@@ -872,7 +872,7 @@
                     </div>
                   </button>
                 </div>
-                <div class="col-xxl-6 px-0 pb-2">
+                <div class="col px-0 pb-2 mx-1">
                   <button class="btn btn-dark row d-flex p-0 m-0" style="width: 140px; border-radius: 10px;">
                     <i class="bi bi-google-play col-4 text-center p-2" style="font-size: 25px;"></i>
                     <div class="col p-0 text-start">
