Puntos interrupción terminados, a falta de retocar los del carrousel desplegable.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 
 <body>
   <div class="container" style="background-color: #fafafa;">
+
+    <!-- Mensaje -->
     <div class="enviogratis row text-center" style="background-color: hsl(144, 37%, 56%); color: white;">
       <span>Envío gratis a partir de 49€</span>
     </div>
-    
-    <!-- Botón categorías oculto hasta md -->
+
     <div class="header row" style="align-items: center; justify-content: center; background-color: white;">
-      <div class="boton navbar-light col-1 offset-1 d-md-none">
+
+      <!-- Botón categorías oculto hasta md -->
+      <div class="boton navbar-light col-12 d-md-none d-flex m-3" style="justify-content: center;">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#categorias"
           aria-controls="categorias">
           <span class="navbar-toggler-icon"></span>
@@ -66,14 +69,14 @@
           </div>
         </div>
       </div>
-      
+
       <!-- Imagen logo -->
-      <div class="logo col-2 p-0">
+      <div class="logo col-2 p-0" style="min-width: 120px;">
         <img src="ref/logo.jfif" class="img-fluid" alt="logo">
       </div>
 
       <!-- Barra de búsqueda -->
-      <div class="buscador col-4">
+      <div class="buscador col-8 col-lg-4">
         <form action="" class="d-flex">
           <button class="btn btn-outline-dark" type="button">
             <i class="bi bi-search"></i>
@@ -282,9 +285,10 @@
                       <div style="height: 72px;">
                         <h5 class="card-title"">Ashwagandha 600 mg</h5>
                       </div>
-                      <p class="card-text">90 cápsulas</p>
+                      <p class=" card-text">90 cápsulas</p>
                           <h4>23,55€ <small class="text-muted text-decoration-line-through">27,45€</small></h4>
-                          <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                          <a href="#" class="btn btn-success col-12 fw-bold"
+                            style="background-color: #64b885; font-size: x-large;">
                             <i class="bi bi-cart-plus"></i>
                             Añadir
                           </a>
@@ -301,7 +305,8 @@
                         </div>
                         <p class="card-text">480 gr</p>
                         <h4>20,99€ <small class="text-muted text-decoration-line-through">29,65€</small></h4>
-                        <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                        <a href="#" class="btn btn-success col-12 fw-bold"
+                          style="background-color: #64b885; font-size: x-large;">
                           <i class="bi bi-cart-plus"></i>
                           Añadir
                         </a>
@@ -318,7 +323,8 @@
                         </div>
                         <p class="card-text">60 perlas</p>
                         <h4>15,95€ <small class="text-muted text-decoration-line-through">18,85€</small></h4>
-                        <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                        <a href="#" class="btn btn-success col-12 fw-bold"
+                          style="background-color: #64b885; font-size: x-large;">
                           <i class="bi bi-cart-plus"></i>
                           Añadir
                         </a>
@@ -335,7 +341,8 @@
                         </div>
                         <p class="card-text">120 cápsulas</p>
                         <h4>14,95€ <small class="text-muted text-decoration-line-through">17,64€</small></h4>
-                        <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                        <a href="#" class="btn btn-success col-12 fw-bold"
+                          style="background-color: #64b885; font-size: x-large;">
                           <i class="bi bi-cart-plus"></i>
                           Añadir
                         </a>
@@ -356,7 +363,8 @@
                       </div>
                       <p class=" card-text">100 comprimidos</p>
                             <h4>15,95€ <small class="text-muted text-decoration-line-through">18,85€</small></h4>
-                            <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                            <a href="#" class="btn btn-success col-12 fw-bold"
+                              style="background-color: #64b885; font-size: x-large;">
                               <i class="bi bi-cart-plus"></i>
                               Añadir
                             </a>
@@ -373,7 +381,8 @@
                           </div>
                           <p class="card-text">30 cápsulas</p>
                           <h4>6,95€ <small class="text-muted text-decoration-line-through">8,15€</small></h4>
-                          <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                          <a href="#" class="btn btn-success col-12 fw-bold"
+                            style="background-color: #64b885; font-size: x-large;">
                             <i class="bi bi-cart-plus"></i>
                             Añadir
                           </a>
@@ -390,7 +399,8 @@
                           </div>
                           <p class="card-text">400 perlas</p>
                           <h4>23,95€ <small class="text-muted text-decoration-line-through">28,05€</small></h4>
-                          <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                          <a href="#" class="btn btn-success col-12 fw-bold"
+                            style="background-color: #64b885; font-size: x-large;">
                             <i class="bi bi-cart-plus"></i>
                             Añadir
                           </a>
@@ -407,7 +417,8 @@
                           </div>
                           <p class="card-text">120 cápsulas</p>
                           <h4>15,25€ <small class="text-muted text-decoration-line-through">17,95€</small></h4>
-                          <a href="#" class="btn btn-success col-12 fw-bold" style="background-color: #64b885; font-size: x-large;">
+                          <a href="#" class="btn btn-success col-12 fw-bold"
+                            style="background-color: #64b885; font-size: x-large;">
                             <i class="bi bi-cart-plus"></i>
                             Añadir
                           </a>
