--- a/index.html
+++ b/index.html
@@ -235,26 +235,49 @@
 
     <!-- Marcas -->
     <h3 style="margin-top: 20px; margin-bottom: 20px;">Nuestras marcas</h3>
-    <div class="marcas row d-flex flex-wrap gap-3" style="justify-content: center;">
-      <div class="col-2 text-center pt-4" style="background-color: #edf7f1; border-radius: 10px;">
-        <img src="ref/marca1s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-        <p class="fw-bold mt-3 mb-0">Naturitas Essentials</p>
-        <p>Suplementos y alimentación esenciales</p>
+    <div class="marcas row d-flex flex-wrap gap-sm-3 mb-4" style="justify-content: center;">
+      <div class="col text-center pt-4" style="background-color: #edf7f1; border-radius: 10px;">
+        <div class="row align-items-center">
+          <div class="col d-none d-lg-block p-0"><img src="ref/marca1.png" class="figure-img" style="width: 125px;"></div>
+          <div class="col">
+            <img src="ref/marca1s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Naturitas Essentials</p>
+            <p style="font-size: x-small;">Suplementos y alimentación esenciales</p>
+          </div>
+        </div>
       </div>
-      <div class="col-2 text-center pt-4" style="background-color: #f4e8c7; border-radius: 10px;">
-        <img src="ref/marca2s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-        <p class="fw-bold mt-3 mb-0">Zeutics</p>
-        <p>Suplementos formulados por expertos</p>
+      <div class="w-100 d-sm-none"></div>
+      <div class="col text-center pt-4" style="background-color: #f4e8c7; border-radius: 10px;">
+        <div class="row align-items-center">
+          <div class="col d-none d-lg-block p-0"><img src="ref/marca2.png" class="figure-img" style="width: 125px;"></div>
+          <div class="col">
+            <img src="ref/marca2s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zeutics</p>
+            <p style="font-size: x-small;">Suplementos formulados por expertos</p>
+          </div>
+        </div>
       </div>
-      <div class="col-2 text-center pt-4" style="background-color: #e1dbe1; border-radius: 10px;">
-        <img src="ref/marca3s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-        <p class="fw-bold mt-3 mb-0">Zentrity</p>
-        <p>Productos para el bienestar emocional</p>
+      <div class="w-100 d-md-none"></div>
+      <div class="col text-center pt-4" style="background-color: #e1dbe1; border-radius: 10px;">
+        <div class="row align-items-center">
+          <div class="col d-none d-lg-block p-0"><img src="ref/marca3.png" class="figure-img" style="width: 125px;"></div>
+          <div class="col">
+            <img src="ref/marca3s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zentrity</p>
+            <p style="font-size: x-small;">Productos para el bienestar emocional</p>
+          </div>
+        </div>
       </div>
-      <div class="col-2 text-center pt-4" style="background-color: #f8ebed; border-radius: 10px;">
-        <img src="ref/marca4s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-        <p class="fw-bold mt-3 mb-0">Woments</p>
-        <p>Productos para la salud de la mujer</p>
+      <div class="w-100 d-sm-none"></div>
+      <div class="col text-center pt-4" style="background-color: #f8ebed; border-radius: 10px;">
+        <div class="row align-items-center">
+          <div class="col d-none d-lg-block p-0"><img src="ref/marca4.png" class="figure-img" style="width: 125px;"></div>
+          <div class="col">
+            <img src="ref/marca4s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Woments</p>
+            <p style="font-size: x-small;">Productos para la salud de la mujer</p>
+          </div>
+        </div>
       </div>
     </div>
 
